[package]
name = "swagladder"
version = "0.1.0"
authors = ["Russell Currey <ruscur@russell.cc>"]

[dependencies]
iron = "0.5"
router = "0.5"
rustc-serialize = "0.3"
redis = "0.5"
handlebars = "0.24"
handlebars-iron = "0.22"
env_logger = "0.4"
time = "0.1"
# 0.10 is out, but inth-oauth2 likes 0.9
hyper = "0.9"
inth-oauth2 = "0.10"
